--- a/eksempler/js.html
+++ b/eksempler/js.html
@@ -62,7 +62,7 @@
 			</div>
             <ul>
                 <li>
-                    <a href=""><h1>Variablar og datatypar</h1></a>
+                    <a href="https://github.com/stineIM/stineIM.github.io/blob/master/resources/js/variables.js"><h1>Variablar og datatypar</h1></a>
                 </li>
                 <hr style="border: 1px solid black; width: 100%;">
                 <li>
