changed styling and added files

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,43 +10,54 @@
 </head>
 
 <body>
-	<div class="main-content" >
+	<div class="main-content">
 
-	<div class="navigation">
-		<div class="logo">
-			<span class="nav-item" id="logo">
-			<a id="logo" href="index.html">IM Stord</a>
-			</span>
+		<div class="navigation">
+			<div class="logo">
+				<span class="nav-item" id="logo">
+					<a id="logo" href="../index.html"><img src="../resources/images/im_logo_ligg_sv_purple.jpg"></a>
+				</span>
+			</div>
+			<div class="links">
+				<span class="nav-item">
+					<a href="index.html">Heim</a>
+				</span>
+				<span class="nav-item">
+					<a href="vg1/index.html">Vg1</a>
+				</span>
+				<span class="nav-item">
+					<a href="vg2/index.html">Vg2</a>
+				</span>
+				<span class="nav-item">
+					<a href="about.html">Om oss</a>
+				</span>
+			</div>
 		</div>
-		<div class="links">
-			<span class="nav-item">
-				<a href="index.html">Heim</a>
-			</span>
-			<span class="nav-item">
-				<a href="vg1/index.html">Vg1</a>
-			</span>
-			<span class="nav-item">
-				<a href="vg2/index.html">Vg2</a>
-			</span>  
-			<span class="nav-item">
-				<a href="#">YFF</a>
-			</span>
-			<span class="nav-item">
-				<a href="about.html">Info</a>
-			</span>
+
+		<div>
+			<h1 class="subjectHeader">Om oss</h1>
+			<p>Dette er faget for deg som er kreativ og interessert i IT, nettverk og visuelle uttrykksformer. Etter 2
+				år på skule kan du gå ut i lære. Du kan også ta påbygg til generell studiekompetanse før eller etter
+				læretida. </p>
+			<h2>Kvifor velje informasjonsteknologi og medieproduksjon:</h2>
+			<p>Informasjonsteknologi og medieproduksjon er eit framtidsretta utdanningsval som gjev deg mange
+				moglegheiter.</p>
+			<p>Etter læretid kan du ta fagbrev i:</p>
+			<ul>
+				<li>IT-utviklarfaget</li>
+				<li>IT-driftsfaget</li>
+				<li>Innhaldsproduksjonsfaget</li>
+				<li>Mediedesignfaget</li>
+				<li>Medieteknikkfaget</li>
+			</ul>
 		</div>
+
 	</div>
-		
-		<div class="header">
-			<h1>Om denne sida</h1>
-            <p>Her har eg samla ein del oppgåver og fagstoff i faga Konseptutvikling og programmering og utvikling. </p>
-		</div>
-		
-	  </div>
 	<footer>
 		<p>&#169; <span id="year"></span> Stine Jonassen Føyen </p>
 	</footer>
 
 	<script type="text/javascript" src="resources/js/year.js"></script>
 </body>
+
 </html>
