--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,49 +11,88 @@
 </head>
 
 <body>
-	<div class="main-content" >
+	<div class="main-content">
 
-	<div class="navigation">
-		<div class="logo">
-			<span class="nav-item" id="logo">
-			<a id="logo" href="index.html">IM Stord</a>
-			</span>
+		<div class="navigation">
+			<div class="logo">
+				<span class="nav-item" id="logo">
+					<a id="logo" href="../index.html"><img src="../resources/images/im_logo_ligg_sv_purple.jpg"></a>
+				</span>
+			</div>
+			<div class="links">
+				<span class="nav-item">
+					<a href="index.html">Heim</a>
+				</span>
+				<span class="nav-item">
+					<a href="vg1/index.html">Vg1</a>
+				</span>
+				<span class="nav-item">
+					<a href="vg2/index.html">Vg2</a>
+				</span>
+				<span class="nav-item">
+					<a href="about.html">Om oss</a>
+				</span>
+			</div>
 		</div>
-		<div class="links">
-			<span class="nav-item">
-				<a href="index.html">Heim</a>
-			</span>
-			<span class="nav-item">
-				<a href="vg1/index.html">Vg1</a>
-			</span>
-			<span class="nav-item">
-				<a href="vg2/index.html">Vg2</a>
-			</span>  
-			<span class="nav-item">
-				<a href="about.html">Om oss</a>
-			</span>
+
+		<div class="header">
+			<h1>IM Stord vgs</h1>
+			<div class="grid-container">
+				<a href="vg1/index.html">
+					<div class="grid-item-box">
+						Vg1 Konseptutvikling og programmering
+					</div>
+				</a>
+				<a href="vg2/index.html">
+					<div class="grid-item-box">
+						Vg2 Utvikling
+					</div>
+				</a>
+			</div>
+			<h2 class="subjectHeader">Tema:</h2>
+
+			<div class="box-container">
+				<a href="vg1/index.html">
+					<div class="box">
+						<span class="header">HTML / CSS</span>
+					</div>
+				</a>
+				<a href="vg2/index.html">
+					<div class="box">
+						JavaScript
+					</div>
+				</a>
+				<a href="vg1/index.html">
+					<div class="box">
+						Python
+					</div>
+				</a>
+				<a href="vg2/index.html">
+					<div class="box">
+						C#
+					</div>
+				</a>
+				<a href="vg1/index.html">
+					<div class="box">
+						Databaser
+					</div>
+				</a>
+				<a href="vg2/index.html">
+					<div class="box">
+						Power Apps
+					</div>
+				</a>
+
+			</div>
+
 		</div>
-	</div>
-		
-	<div class="header">
-		<h1>Informasjonsteknologi og medieproduksjon</h1>
-		<div class="grid-container">
-			<a href="vg1/index.html">
-				<div class="grid-item-box">
-					Vg1 Konseptutvikling og programmering
-				</div>
-			</a>
-			<a href="vg2/index.html">	
-				<div class="grid-item-box">
-					Vg2 Utvikling
-				</div>
-			</a>
-		</div>
-	</div>	
+
+
 	</div>
 	<footer>
 		<p>&#169; <span id="year"></span> Stine Jonassen Føyen </p>
 	</footer>
 	<script type="text/javascript" src="resources/js/year.js"></script>
 </body>
+
 </html>
