--- a/vg1/index.html
+++ b/vg1/index.html
@@ -17,7 +17,7 @@
 		<div class="navigation">
 			<div class="logo">
 				<span class="nav-item" id="logo">
-					<a id="logo" href="../index.html">IM Stord</a>
+					<a id="logo" href="../index.html"><img src="../resources/images/im_logo_ligg_sv_purple.jpg"></a>
 				</span>
 			</div>
 			<div class="links">
@@ -39,7 +39,7 @@
 	</div>
 	<main>
 		<div>
-			<h1>Vg1 Konseptutvikling og programmering</h1>
+
 			<!-- 
 			<div class="grid-container">
 				<a href="vg1/index.html">
@@ -57,74 +57,12 @@
 				</div>
 			</div>
 			-->
+			<h1 class="subjectHeader">Vg1 Konseptutvikling og programmering</h1>
+
 			<div class="grid-container">
 				<div>
-					<div>
-						<h1>Plan for året</h1>
-						<div class="grid-container-5">
-							<div class="box">
-								<div class="box-header">
-									Start til høstferie
-								</div>
-								<div class="box-content"></div>
-							</div>
-							<div class="box">
-								<div class="box-header">
-									Høstferie til terminslutt
-								</div>
-
-								<div class="box-content">
-									<ul>
-										<li>
-											Valfri Oppgåve
-										</li>
-										<li>
-											Databaser
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="box">
-								<div class="box-header">
-									Terminstart - vinterferie
-								</div>
-								<div class="box-content">
-									<ul>
-										<li>
-											Valfri Oppgåve
-										</li>
-										<li>
-											Databaser
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="box">
-								<div class="box-header active">
-									Vinterferie - påskeferie
-								</div>
-								<div class="box-content active">
-									<ul>
-										<li>
-											Valfri Oppgåve
-										</li>
-										<li>
-											Databaser
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="box">
-								<div class="box-header">
-									Påskeferie - sommerferie
-								</div>
-								<div class="box-content"></div>
-							</div>
-						</div>
-					</div>
 					<div class="subheader">
-						<h1>Eksempler</h1>
-						<div class="grid-container-5">
+						<div class="boxes">
 							<a href="examples/html.html">
 								<div class="grid-box">
 									HTML
@@ -147,14 +85,39 @@
 							</a>
 							<a href="examples/js.html">
 								<div class="grid-box">
-									Prototype
+									Power Apps
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Personvern
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Databaser
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Prototyping
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Dokumentasjon
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Utviklingsmiljø
 								</div>
 							</a>
 						</div>
 					</div>
 					<div class="subheader task-grid">
 						<div class="blue-box">
-							<h1>Innleveringer</h1>
+							<h2>Innleveringer</h2>
 							<ul class="exer">
 								<li>
 									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f"
@@ -183,10 +146,16 @@
 										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ETp8nOMKChpNsMNw8b_ao-wB2XaoOzEj6kSeVPNlb65kSA?e=aOdUg4">05
 										- Power Apps</a>
 								</li>
+								<hr />
+								<li>
+									<a
+										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ETp8nOMKChpNsMNw8b_ao-wB2XaoOzEj6kSeVPNlb65kSA?e=aOdUg4">06
+										- Valfri oppgåve</a>
+								</li>
 							</ul>
 						</div>
 						<div class="blue-box">
-							<h1>Øvingsoppgåver</h1>
+							<h2>Øvingsoppgåver</h2>
 							<h3>HTML</h3>
 							<ul class="exer">
 								<li>
@@ -212,8 +181,7 @@
 							<h3>JavaScript</h3>
 							<ul class="exer">
 								<li>
-									<a href="../vg1/exercises/ex1.html"
-										target="_blank">Øving 1</a>
+									<a href="../vg1/exercises/ex1.html" target="_blank">Øving 1</a>
 								</li>
 								<hr />
 								<li>
@@ -224,41 +192,49 @@
 
 					</div>
 				</div>
-				<div class="blue-box">
-					<h1>Kompetansemål</h1>
-					<ul>
-						<li>
-							anvende regelverk for bruk og formidling av innhold i egen produksjon og reflektere over
-							ansvar og etikk knyttet til bruk og formidling av innhold i egen produksjon
-						</li>
-						<li>
-							utforske og beskrive sammenhenger mellom løsninger, kundens behov og brukernes
-							forutsetninger og erfaringer
-						</li>
-						<li>
-							bruke programmering til å løse praktiske utfordringer og til å fortelle interaktive
-							historier
-						</li>
-						<li>
-							utforske og anvende verktøy for datamodellering i oppbygging av databaser
-						</li>
-						<li>
-							bruke oppmerkingsspråk og stilsett i ulike produksjoner
-						</li>
-						<li>
-							visualisere og utvikle konsepter og ideer tilpasset ulike plattformer
-						</li>
-						<li>
-							beskrive hvordan teknologi behandler data, algoritmer og statistikk
-						</li>
-						<li>
-							bruke prinsipper for feilsøking og retting i arbeid med programmering
-						</li>
-						<li>
-							bruke dokumentasjon og dokumentere faglige prosesser
-						</li>
-					</ul>
+				<div>
+					<div class="blue-box" id="links-right">
+						<h2>Lenker:</h2>
+						<ul>
+							<li>
+								<a href="">Kompetansemål (Udir)</a>
+							</li>
+							<li>
+								<a href="">It's Learning</a>
+							</li>
+							<li>
+								<a href="">NDLA.no</a>
+							</li>
+							<li>
+								<a href="">OneNote</a>
+							</li>
+							<li>
+								<a href="">W3Schools</a>
+							</li>
+						</ul>
+					</div>
+					<div class="blue-box" id="links-right">
+						<h2>Lenker:</h2>
+						<ul>
+							<li>
+								<a href="">Kompetansemål (Udir)</a>
+							</li>
+							<li>
+								<a href="">It's Learning</a>
+							</li>
+							<li>
+								<a href="">NDLA.no</a>
+							</li>
+							<li>
+								<a href="">OneNote</a>
+							</li>
+							<li>
+								<a href="">W3Schools</a>
+							</li>
+						</ul>
+					</div>
 				</div>
+
 			</div>
 
 		</div>
