--- a/vg2/index.html
+++ b/vg2/index.html
@@ -16,7 +16,7 @@
 		<div class="navigation">
 			<div class="logo">
 				<span class="nav-item" id="logo">
-				<a id="logo" href="../index.html">IM Stord</a>
+					<a id="logo" href="../index.html"><img src="../resources/images/im_logo_ligg_sv_purple.jpg"></a>
 				</span>
 			</div>
 			<div class="links">
@@ -37,13 +37,13 @@
 		</div>
 	</div>
 	<main>
+		<h1 class="subjectHeader">Vg2 Utvikling</h1>
+
 		<div >
-			<h1>Vg2 Utvikling</h1>
 			
 			<div class="grid-container">
 				<div>
 					<div class="subheader">
-						<h1>Fagstoff</h1>
 						<div class="grid-container-3">
 							<a href="examples/html.html">
 								<div class="grid-box">
@@ -60,11 +60,46 @@
 									Databasar
 								</div>
 							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Personvern
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Digitale truslar
+								</div>
+							</a>
+							<a href="examples/html.html">
+								<div class="grid-box">
+									Verktøy
+								</div>
+							</a>
+							<a href="examples/css.html">
+								<div class="grid-box">
+									Utviklingsmiljø
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Dokumentasjon
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Power Apps
+								</div>
+							</a>
+							<a href="examples/js.html">
+								<div class="grid-box">
+									Rammeverk
+								</div>
+							</a>
 						</div>
 					</div>
 					<div class="subheader task-grid" >
 						<div class="blue-box">
-							<h1>Innleveringer</h1>
+							<h2>Innleveringer</h2>
 							<ul class="exer">
 								<li>
 									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EZaXJkouSPZJn6v0jGubGMUBfEzLCx4ItcFh_UW8Ebyaqw?e=CcYD7f" target="_blank">01 - Nettbutikk</a>
@@ -76,11 +111,19 @@
 								<hr />
 								<li>
 									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EeVHmhdDHdxNhk-4hmaydoYBLEqcNYzPOJw3Vg-DIldSnQ?e=hcBrAa">03 - Min portefølje</a>
+								</li>
+								<hr />
+								<li>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EeVHmhdDHdxNhk-4hmaydoYBLEqcNYzPOJw3Vg-DIldSnQ?e=hcBrAa">04 - Min portefølje</a>
+								</li>
+								<hr />
+								<li>
+									<a href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EeVHmhdDHdxNhk-4hmaydoYBLEqcNYzPOJw3Vg-DIldSnQ?e=hcBrAa">05 - Min portefølje</a>
 								</li>						
 							</ul>
 						</div>
 						<div class="blue-box">
-							<h1>Øvingsoppgåver</h1>
+							<h2>Øvingsoppgåver</h2>
 							<h3>HTML / CSS / JS</h3>
 							<ul class="exer">
 								<li>
@@ -115,36 +158,27 @@
 						
 					</div>
 				</div>
-				<div class="blue-box">
-					<h1>Kompetansemål</h1>
+				<div class="blue-box" id="links-right">
+					<h2>Lenker:</h2>
 					<ul>
 						<li>
-							vurdere fordeler og ulemper ved ulike programmeringsspråk og velge og anvende relevante programmeringsspråk og algoritmer i eget arbeid
+							<a href="">Kompetansemål (Udir)</a>
 						</li>
 						<li>
-							lage og begrunne funksjonelle krav til en IT-løsning basert på behovskartlegging
+							<a href="">It's Learning</a>
 						</li>
 						<li>
-							vurdere brukergrensesnitt til IT-tjenester og designe tjenester som er tilpasset brukernes behov
+							<a href="">NDLA.no</a>
 						</li>
 						<li>
-							gjøre rede for hensikten med teknisk dokumentasjon og utarbeide teknisk dokumentasjon for IT-løsninger						</li>
-						<li>
-							beskrive og anvende relevante versjonskontrollsystemer i utviklingsprosjekter						</li>
-						<li>
-							designe og implementere IT-tjenester med innebygget personvern						</li>
-						<li>
-							analysere digitale trusler, verdier og sårbarheter og utvikle applikasjoner med innebygget sikkerhet						</li>
-						<li>
-							anvende relevant testmiljø og utføre testing tilpasset IT-løsningen som utvikles						</li>
-						<li>
-							modellere og opprette databaser for informasjonsflyt i systemer
+							<a href="">OneNote</a>
 						</li>
 						<li>
-							beskrive ulike datalagringsmodeller og metoder for å hente ut og sette inn bestemte data fra databaser som brukes av andre systemer
+							<a href="">W3Schools</a>
 						</li>
 					</ul>
 				</div>
+	
 			</div>
 			
 		</div>
