--- a/vg1/index.html
+++ b/vg1/index.html
@@ -108,7 +108,7 @@
 									Dokumentasjon
 								</div>
 							</a>
-							<a href="examples/js.html">
+							<a href="examples/environment.html">
 								<div class="grid-box">
 									Utviklingsmiljø
 								</div>
@@ -151,6 +151,12 @@
 									<a
 										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/ETp8nOMKChpNsMNw8b_ao-wB2XaoOzEj6kSeVPNlb65kSA?e=aOdUg4">06
 										- Valfri oppgåve</a>
+								</li>
+								<hr />
+								<li>
+									<a
+										href="https://vlfksky-my.sharepoint.com/:w:/g/personal/stine_jonassen_foyen_vlfk_no/EV2S2_qavlVGrQ4j8C9cosoBo0TTx25Gl0E3T17n7xSVxg?e=Akwx3o">07
+										- Web API</a>
 								</li>
 							</ul>
 						</div>
@@ -214,22 +220,19 @@
 						</ul>
 					</div>
 					<div class="blue-box" id="links-right">
-						<h2>Lenker:</h2>
+						<h2>!Viktig å huske på:!</h2>
 						<ul>
 							<li>
-								<a href="">Kompetansemål (Udir)</a>
+								Ryddig kode
 							</li>
 							<li>
-								<a href="">It's Learning</a>
+								Passende filnamn
 							</li>
 							<li>
-								<a href="">NDLA.no</a>
+								God mappe-og filstruktur
 							</li>
 							<li>
-								<a href="">OneNote</a>
-							</li>
-							<li>
-								<a href="">W3Schools</a>
+								Kommentarar i koden
 							</li>
 						</ul>
 					</div>
